--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,279 +1,377 @@
-/*
- * Style tweaks
- * --------------------------------------------------
- */
+:root {
+    --primary-color: #2B333E;
+    --primary-text-white: rgba(255, 255, 255, 0.9);
+    --primary-light: #545c69;
+    --primary-dark: #010c18;
+    --secondary-color: #f5f5fa;
+    --secondary-text-black: rgba(0, 0, 0, 0.6);
+    --secondary-light: #ffffff;
+    --secondary-light-text-black: rgb(0, 0, 0);
+    --secondary-dark: #c2c2c7;
+    --accent-color: #0AF;
+    --trasition__bezier: all 300ms cubic-bezier(0.5, 0.57, 0.42, 1);
+    --elevation--z0: 0 0 0 0 rgba(0,0,0,.2),0 0 0 0 rgba(0,0,0,.14),0 0 0 0 rgba(0,0,0,.12);
+    --elevation--z1: 0 2px 1px -1px rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 1px 3px 0 rgba(0,0,0,.12);
+    --elevation--z2: 0 3px 1px -2px rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12);
+    --elevation--z3: 0 3px 3px -2px rgba(0,0,0,.2),0 3px 4px 0 rgba(0,0,0,.14),0 1px 8px 0 rgba(0,0,0,.12);
+    --elevation--z4: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12);
+    --elevation--z5: 0 3px 5px -1px rgba(0,0,0,.2),0 5px 8px 0 rgba(0,0,0,.14),0 1px 14px 0 rgba(0,0,0,.12);
+    --elevation--z6: 0 3px 5px -1px rgba(0,0,0,.2),0 6px 10px 0 rgba(0,0,0,.14),0 1px 18px 0 rgba(0,0,0,.12);
+    --elevation--z7: 0 4px 5px -2px rgba(0,0,0,.2),0 7px 10px 1px rgba(0,0,0,.14),0 2px 16px 1px rgba(0,0,0,.12);
+    --elevation--z8: 0 5px 5px -3px rgba(0,0,0,.2),0 8px 10px 1px rgba(0,0,0,.14),0 3px 14px 2px rgba(0,0,0,.12);
+    --elevation--z9: 0 5px 6px -3px rgba(0,0,0,.2),0 9px 12px 1px rgba(0,0,0,.14),0 3px 16px 2px rgba(0,0,0,.12);
+    --elevation--z10: 0 6px 6px -3px rgba(0,0,0,.2),0 10px 14px 1px rgba(0,0,0,.14),0 4px 18px 3px rgba(0,0,0,.12);
+    --elevation--z11: 0 6px 7px -4px rgba(0,0,0,.2),0 11px 15px 1px rgba(0,0,0,.14),0 4px 20px 3px rgba(0,0,0,.12);
+    --elevation--z12: 0 7px 8px -4px rgba(0,0,0,.2),0 12px 17px 2px rgba(0,0,0,.14),0 5px 22px 4px rgba(0,0,0,.12);
+    --elevation--z13: 0 7px 8px -4px rgba(0,0,0,.2),0 13px 19px 2px rgba(0,0,0,.14),0 5px 24px 4px rgba(0,0,0,.12);
+    --elevation--z14: 0 7px 9px -4px rgba(0,0,0,.2),0 14px 21px 2px rgba(0,0,0,.14),0 5px 26px 4px rgba(0,0,0,.12);
+    --elevation--z15: 0 8px 9px -5px rgba(0,0,0,.2),0 15px 22px 2px rgba(0,0,0,.14),0 6px 28px 5px rgba(0,0,0,.12);
+    --elevation--z16: 0 8px 10px -5px rgba(0,0,0,.2),0 16px 24px 2px rgba(0,0,0,.14),0 6px 30px 5px rgba(0,0,0,.12);
+    --elevation--z17: 0 8px 11px -5px rgba(0,0,0,.2),0 17px 26px 2px rgba(0,0,0,.14),0 6px 32px 5px rgba(0,0,0,.12);
+    --elevation--z18: 0 9px 11px -5px rgba(0,0,0,.2),0 18px 28px 2px rgba(0,0,0,.14),0 7px 34px 6px rgba(0,0,0,.12);
+    --elevation--z19: 0 9px 12px -6px rgba(0,0,0,.2),0 19px 29px 2px rgba(0,0,0,.14),0 7px 36px 6px rgba(0,0,0,.12);
+    --elevation--z20: 0 10px 13px -6px rgba(0,0,0,.2),0 20px 31px 3px rgba(0,0,0,.14),0 8px 38px 7px rgba(0,0,0,.12);
+    --elevation--z21: 0 10px 13px -6px rgba(0,0,0,.2),0 21px 33px 3px rgba(0,0,0,.14),0 8px 40px 7px rgba(0,0,0,.12);
+    --elevation--z22: 0 10px 14px -6px rgba(0,0,0,.2),0 22px 35px 3px rgba(0,0,0,.14),0 8px 42px 7px rgba(0,0,0,.12);
+    --elevation--z23: 0 11px 14px -7px rgba(0,0,0,.2),0 23px 36px 3px rgba(0,0,0,.14),0 9px 44px 8px rgba(0,0,0,.12);
+    --elevation--z24: 0 11px 15px -7px rgba(0,0,0,.2),0 24px 38px 3px rgba(0,0,0,.14),0 9px 46px 8px rgba(0,0,0,.12);
+}
+
+html,body {
+    min-height: 100vh;
+}
 body {
     padding-top: 50px;
     background: #ffffff;
 }
 
-footer {
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: #f7f7f7;
-}
-
 .form-control {
     height: inherit;
 }
-
-/*
- * Off Canvas
- * --------------------------------------------------
- */
-@media screen and (max-width: 767px) {
-    .row-offcanvas {
-        position: relative;
-        -webkit-transition: all 0.25s ease-out;
-        -moz-transition: all 0.25s ease-out;
-        transition: all 0.25s ease-out;
-    }
-
-    .row-offcanvas-left
-    .sidebar-offcanvas {
-        /*left: -33%;*/
-        left: -200px;
-    }
-
-    .row-offcanvas-left.active {
-        /*left: 33%;*/
-        left: 200px;
-        transition: all 0.25s ease-out;
-    }
-
-    .sidebar-offcanvas {
-        position: absolute;
-        top: 0;
-        /*width: 33%;*/
-        width: 200px;
-        /*margin-left: 10px;*/
-    }
-
-    .small-color>li>a {
-        color: #FFFFFF;
-    }
-
-    .sm-fix {
-        margin-top: 8px;
-    }
-
-    .navbar-brand
-    {
-        position: absolute;
-        width: 100%;
-        left: 0;
-        top: 0;
-        text-align: center;
-        margin: auto;
-        padding:0;
-        margin-top: 20px;
-    }
-
-    .navbar-toggle {
-        z-index:1;
-    }
-}
-
-.sidebar-offcanvas hr {
-    margin: 15px -15px;
-}
-
-.page-info-list {
-    padding-top: 30px;
-}
-
-.sm-delete {
-    margin-top: 15px;
-    margin-left: -15px;
-    margin-right: -15px;
-}
-
-.open-btn {
-    margin-top: 8px;
-    margin-right: 15px;
-    margin-bottom: 8px;
-    background-color: transparent;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 4px;
-}
-.open-btn:focus {
-    outline: 0;
-}
-.open-btn .icon-bar {
-    display: block;
-    width: 22px;
-    height: 2px;
-    border-radius: 1px;
-}
-.open-btn .icon-bar + .icon-bar {
-    margin-top: 4px;
-}
-.open-btn>i {
-    display: block;
-    padding: 10px 20px 13px 15px;
-}
-
-
-@media screen and (min-width: 767px){
-    #search-bar {
-        width: 300px;
-    }
-
-    .page-info-list {
-        padding-top: 80px;
-    }
-}
-
-.page-info-list ul li {
-    font-size: 13px;
-    padding: 0px;
-}
-
-/* Sidebar navigation */
-.nav-sidebar {
-    background: #607D8B;
-    margin-right: -15px;
-    margin-bottom: 20px;
-    margin-left: -15px;
-}
-
-.nav-sidebar > li > a {
-    padding: 5px 10px;
-}
-
-.nav-sidebar > .active > a {
-    color: #fff;
-    background-color: #428bca;
-}
-
-/*
- * Main content
- */
-
 .main {
     padding: 20px;
     background-color: #f7f7f7;
 }
-
-@media (min-width: 768px) {
-    .main {
-        padding-right: 40px;
-        padding-left: 40px;
-    }
-}
-
 .main .page-header {
     margin-top: 0;
 }
 
-.cover {
-    width: 110px;
+/*layout*/
+
+.navigation {
+    display: inline-flex;
+    justify-content: space-between;
+    height: 50px;
+    width: 100%;
+    position: fixed;
+    top: 0px;
+    z-index: 1030;
+    background-color: var(--secondary-light);
+    box-shadow: var(--elevation--z8);
+}
+.navigation-item {
+    line-height: 50px;
+}
+.navigation-left {
+    display: inline-flex;
+}
+.navigation-right {
+    display: inline-flex;
+    margin-right: 10px;
+}
+.input-group {
+    margin-top: 8px;
+}
+.navigation-search {
+    display: inline;
+    width: 340px;
+}
+.user-icon-btn {
+    height: 50px;
+    margin-left: 10px;
+    font-size: 22px;
+}
+.navbar-fixed-top {
+    background-color: var(--secondary-light);
+    box-shadow: var(--elevation--z8);
+}
+.navigation-brand {
+    color: var(--primary-color);
+    cursor:context-menu;
+    margin: 0;
+    font-weight: 600;
+}
+.navbar-brand:hover {
+    color: var(--primary-color);
+}
+.navbar-nav li a {
+    color: var(--primary-color);
+}
+.main-content {
+    margin-left: 250px;
+    margin-right: 0px;
+    min-height: calc(100vh - 50px);
+    background-color: var(--secondary-color);
+    padding: 10px;
+    transition: var(--trasition__bezier);
+}
+.main-content-close {
+    margin-left: 0px;
+}
+.sidebar-open-icon {
+    float: left;
+    margin-right: 11px;
+    margin-left: 10px;
+    font-size: 25px;
+    line-height: 55px;
+    cursor: pointer;
+}
+.sidebar {
+    width: 250px;
+    height: calc(100vh - 50px);
+    background-color: var(--primary-color);
+    overflow-x: hidden;
+    transition: var(--trasition__bezier);
+    position: fixed;
+    right: 0;
+    left: 0;
+    box-shadow: var(--elevation--z8);
+}
+.sidebar-close {
+    width: 0px;
+}
+.sidebar-nav {
+    list-style: none;
+    -webkit-padding-start: 0px;
+}
+.sidebar-close-nav {
+    opacity: 0;
+}
+.sidebar-nav li {
+    box-sizing: border-box;
+    border-left-color: transparent;
+    border-left-width: 5px;
+    border-left-style: solid;
+    cursor: pointer;
+}
+.sidebar-nav li:hover {
+    background-color: var(--primary-dark);
+    border-left-color: var(--accent-color);
+}
+.sidebar-nav li a {
+    color: var(--primary-text-white);
+    display: inline-block;
+    width: 100%;
+    text-decoration: none;
+    padding: 8px 10px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
+.sidebar-nav__separator {
+    margin: 0px;
+    border-top-color: var(--primary-text-white);
+}
+.sidebar-inner {
+    margin-bottom: 50px;
+    height: calc(100% - 50px);
+    overflow-y: auto;
+}
+.sidebar-footer {
+    height: 50px;
+    background-color: var(--primary-dark);
+    text-decoration: none;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    margin-top: -50px;
+    box-sizing: border-box;
+}
+.sidebar-footer:hover {
+    background-color: var(--primary-light);
+}
+.sidebar-footer a {
+    color: var(--secondary-light);
+    display: block;
+    width: 100%;
+    line-height: 50px;
+    text-align: center;
+    font-weight: bold;
+    text-decoration: none;
+    cursor: pointer;
+}
+.sidebar-footer a:hover {
+    color: var(--accent-color);
+}
+
+/*cards*/
+
+.card-holder * {
+    margin: 0;
+    padding: 0;
+}
+.card-holder {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.card {
+    display: inline-flex;
+    border-radius: 4px;
+    margin: 10px;
+    box-shadow: var(--elevation--z4);
+}
+.card-img {
+    height: 150px;
+    width: 100px;
+    border-top-left-radius: inherit;
+    border-bottom-left-radius: inherit;
+}
+.card-content {
+    height: 150px;
+    width: 200px;
+    padding: 10px;
+    box-sizing: border-box;
+    border-top-right-radius: inherit;
+    border-bottom-right-radius: inherit;
+    background-color: var(--secondary-light);
+}
+.card-content h4 a {
+    color: var(--secondary-light-text-black);
+}
+.card-content h4 a:hover {
+    color: var(--primary-color);
+}
+.card-content p a {
+    color: var(--secondary-text-black);
+}
+.card-content p a:hover {
+    color: var(--primary-light);
+}
+.card-content hr {
+    margin: 5px -10px;
+}
+.card-page-header {
+    max-width: 945px;
+    width: 100%;
+}
+.card-page-header h2 {
+    color: var(--primary-dark);
+    display: inline-block;
+}
+.btn-link {
+    color: var(--primary-dark);
+}
+.placeholder {
+    width: 300px;
+    visibility: hidden;
+    height: 0;
+    padding: 0;
+    margin: 10px;
+    border-top-width: 0;
+    border-bottom-width: 0;
+}
+.card-page-header>div.dropdown {
+    display: inline-block;
+    margin-left: 10px;
+}
+.card-details-container {
+    height: 115px;
+}
+.card-title {
+
+}
+.card-author {
+
+}
+.card-footer>small.page-count {
+    float: right;
+    line-height: 22px;
+}
+.limit-2{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    line-height: 22px;
+    max-height: 48px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+/*book info*/
+
+.author-span {
+    font-size: 18px;
+}
+.shelf-checkbox-div {
+    padding-left: 10px;
+}
+.shelf-checkbox-div h4 {
+    text-align: center;
+}
+.shelf-checkbox-div ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.shelf-checkbox-div ul li {
+    white-space: nowrap;
+}
+.shelf-checkbox-div label {
+    font-weight: normal;
+    margin-left: 5px;
+    width: 175px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+}
+/*.shelf-checkbox-div ul li *{*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+/*}*/
+.shelf-checkbox-div ul li input {
+    vertical-align: 7px;
+}
+/*.shelf-radio {*/
+    /*display: inline-flex;*/
+/*}*/
+/*.shelf-checkbox {*/
+    /*display: inline-flex;*/
+/*}*/
+.list-separator {
+    margin: 5px 0px;
+}
 #info-table {
     border-collapse: separate;
     border-spacing: 1em;
-}
-
-.myicon {
-    color: #FFFFFF;
-    font-size: 15px;
-}
-
-.card-padding {
-    padding-top: 20px;
-}
-
-.card-image {
-    width: 85px;
-    height: 130px;
-    margin-right: 10px;
-    margin-top: 10px;
-    box-shadow: 0px 0px 15px 0px #999;
-}
-
-.card-main {
-    min-height: 200px;
-    background-color: white;
-}
-
-.dropdown-menu {
-    border-radius: 0px
-}
-
-.dropdown-menu-center {
-    left: 50% !important;
-    right: auto !important;
-    /*text-align: center !important;*/
-    transform: translate(-50%, 0) !important;
-}
-
-.shelves-list>li>label {
-    width: 100%;
-    padding: 0px 15px;
-}
-
-.radio {
-    padding-left: 25px;
-    padding-right: 5px;
-}
-.radio label {
-    white-space: nowrap;
-}
-
-.card-shelf-save {
-    width: 100%;
-    margin-bottom: -5px;
-    border: none;
-    padding: 5px;
-    outline: none;
 }
 
 .info-page-image {
     margin-top: 15px;
     width: 100%;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),
-                0 2px 10px 0 rgba(0,0,0,0.12);
+    0 2px 10px 0 rgba(0,0,0,0.12);
 }
-
-/*******************/
-
-.dark-primary-color {
-    background: #455A64;
-}
-
-.default-primary-color {
-    background: #607D8B;
-}
-
-.light-primary-color {
-    background: #CFD8DC;
-}
-
-.text-primary-color {
-    color: #FFFFFF;
-}
-
 .card-background {
-    background: #FFFFFF;
-    min-height: 400px;
+    background-color: var(--secondary-light);
+    box-shadow: var(--elevation--z4);
+}
+.sm-delete {
+    margin-top: 15px;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+.page-info-list ul li {
+    font-size: 13px;
+    padding: 0px;
+}
+.page-info-list {
+    padding-top: 30px;
 }
 
-.accent-color {
-    background: #00BCD4;
+.cover {
+    width: 115px;
 }
-
-.primary-text-color {
-    color: #212121;
-}
-
-.secondary-text-color {
-    color: #757575;
-}
-
-.divider-color {
-    border-color: #BDBDBD;
-}
-
-
