--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -45,15 +45,52 @@
             </div>
         </div>
     </nav>
-    <div class="sidebar">
+    <div class="sidebar yt-scrollbar">
         <div class="sidebar-inner">
             <ul class="sidebar-nav">
-                <li><a th:href="@{/books}">My Books</a></li>
-                <li><a href="">Currently Reading</a></li>
-                <li><a href="">To Read</a></li>
-                <li><a href="">Completed</a></li>
+                <li class="sidebar-search hidden-sm hidden-md hidden-lg">
+                    <form th:action="@{/search}" th:object="${query}" method="get">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search" th:field="*{query}"/>
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit">
+                                    <i class="glyphicon glyphicon-search"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </li>
+                <li>
+                    <a th:href="@{/books}" title="My Books">
+                        <span class="title-span">My Books</span>
+                        <span class="badge" th:text="${numMap.get('All')}"></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="" title="Currently Reading">
+                        <span class="title-span">Currently Reading</span>
+                        <span class="badge" th:text="${numMap.get('CR')}"></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="" title="To Read">
+                        <span class="title-span">To Read</span>
+                        <span class="badge" th:text="${numMap.get('TR')}"></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="" title="Completed">
+                        <span class="title-span">Completed</span>
+                        <span class="badge" th:text="${numMap.get('R')}"></span>
+                    </a>
+                </li>
                 <hr class="sidebar-nav__separator"/>
-                <li th:each="shelf :${shelves}"><a th:href="@{'/getShelf/'+ ${shelf}}" th:text="${shelf}"></a></li>
+                <li th:each="shelf,iter :${shelves}">
+                    <a th:href="@{'/getShelf/'+ ${shelf[0]}}" th:title="${shelf[0]}">
+                        <span th:text="${shelf[0]}" class="title-span"></span>
+                        <span th:id="'sidebar'+${iter.index}" class="badge" th:text="${shelf[1]-1}"></span>
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="sidebar-footer">
@@ -84,6 +121,7 @@
             </div>
         </div>
     </div>
+    <div id="overlay" class="hidden"></div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/scripts.js"></script>
